# new_diagnosis_api

./: .env.example  .gitignore  alembic.ini  create_tables.py  create_user.py  migrate_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  reset_db.py  reset_report.py  run_tests.sh  seed.py  seed_admin.py  seed_coaches.py  sql_app.db.backup_20260429_210918  sql_app.db.backup_20260504_210249
alembic/: env.py
alembic/versions/: 39ea918598cd_change_all_uuids_to_str_for_sqlite_.py  3cb88da2baea_update_models_with_guid_and_timestamp.py  6c6bec064039_add_event_table_and_phase_3_a_fields_to_.py  c665464138d2_rename_chatmessage_fields_to_match_.py
diag_project/: config.py  database.py  llm_service.py  main.py  security.py  simulate_test.py
diag_project/data/: coaches_persona.py  competencies.py
diag_project/models/: __init__.py  admin_user.py  coach.py  coach_persona.py  company.py  competency_indicator.py  diagnosis.py  diagnosis_feedback.py  diagnosis_question.py  diagnosis_report.py  diagnosis_result.py  diagnosis_session.py  diagnosis_template.py  evaluation_result.py  event.py  group.py  message.py  participant.py  participant_answer.py  question_answer.py  question_category.py  session.py  uuid_type.py
diag_project/routes/: __init__.py  admin.py  group.py  (+17 more)
docs/: FRAMEWORK_API_CONTRACT.md  FRAMEWORK_DEPENDENCY_AUDIT.md  GIT_HYGIENE_PLAN.md
scripts/: insert_mock_data.py  run_report_pipeline.py
tests/: test_chat_flow.py  test_coach_personas.py  test_coaches.py  test_competency.py  test_diagnosis_flow.py  test_diagnosis_setup.py  test_participants.py
(+55 files in other folders)
