# new_diagnosis_api/pyproject.toml

[project]
name = "diag_project"
version = "0.1.0"
description = "A FastAPI project for diagnosis API"
requires-python = ">=3.10" # 프로젝트에 맞는 파이썬 버전으로 조정
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"] # setuptools를 빌드 백엔드로 사용
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {where = ["."], include = ["diag_project*"]} # diag_project 디렉토리를 패키지로 찾도록 설정

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"